# sisapi

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: crud.py  database.py  main.py
app/models/: __init__.py  models.py  schemas.py
