[tool.poetry]
name = "sisapi"
version = "0.1.0"
description = ""
authors = ["Eivind Teig <eivind.teig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = {extras = ["all"], version = ">=0.95.0"}
python-dotenv = ">=1.0.0"
black = ">=23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
