[tool.poetry]
name = "sisapi"
version = "0.1.0"
description = ""
authors = ["Eivind Teig <eivind.teig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = {extras = ["all"], version = ">=0.95.0"}
python-dotenv = ">=1.0.0"
black = ">=23.1.0"
sqlalchemy = "^2.0.7"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
